--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 
-/**********NAVBAR***********/
-
 body{
   font-family: "Poppins", sans-serif;
 }
 
+
+/**********NAVBAR***********/
+
 #logo{
-  color: white;
+  color: orange;
   font-size: 1.5rem;
 }
 
@@ -26,6 +27,47 @@ nav a.nav-link{
   border-bottom: 0.1875rem solid orange;
 }
 
-.navbar-nav > li > a:hover{
-  border-bottom: 0.1875rem solid orange;
+.header{
+  position: relative;
+  background: url(S:\Projects\React-Portfolio\public\images\bg_img.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info{
+  display: flex;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+}
+
+.main-info h1{
+  color: orange;
+  text-transform: uppercase;
+}
+
+/******TYPED TEXT*******/
+
+.typed-text{
+font-size: 1.5rem;
+color: white;
+}
+
+/******MAIN BUTTON*******/
+
+.btn-main{
+  border: 1px solid white;
+  text-transform: uppercase;
+  border-radius: 5px;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: white;
+  margin-top: 2rem;
 }
