--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 :root{
-  --box-shadow: 5px 5px 10px 0px orange;
+  --box-shadow: 5px 5px 10px 0px rgb(246, 217, 163);
 }
 
 body{
@@ -98,9 +98,9 @@ color: white;
 
 /******ABOUT ME*******/
 
-#about-me{
+/* #about-me{
   padding: 2rem 0 2rem 0;
-}
+} */
 
 /* .about-section .container {
   display: flex;
@@ -128,7 +128,7 @@ color: white;
 
 .my-image-section img{
   width: 70% !important;
-  border-radius: 10px;
+  border-radius: 100%;
   margin: 0.7rem 0 0.7rem 0;
 }
 
@@ -215,7 +215,7 @@ color: white;
 
 .footer-icons .items{
   background-color: black;
-  color: white;
+  color: rgb(248, 224, 180);
   margin: 10px;
   height: 70px;
   width: 70px;
@@ -228,10 +228,10 @@ color: white;
 
 .footer-icons .items:hover{
   box-shadow: var(--box-shadow);
-  transition: .6s;
+  transition: 2ms;
 }
 
 .footer-icons .items .icons{
   font-size: 2rem;
-  color: rgb(243, 222, 184);
+  color: var(--box-shadow);
 }
