--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,10 @@ color: white;
   color: orange;
 }
 
+.btn{
+  background-color: orange;
+}
+
 /**********CONTACT ME***********/
 
 .footer-icons{
