--- a/src/App.css
+++ b/src/App.css
@@ -155,9 +155,9 @@ color: white;
 
 /******SKILLS*******/
 
-.skills {
+/* .skills {
   width: 90%;
-}
+} */
 
 .skills-container{
   display: flex;
