--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 *{
-  padding: 0;
-  margin: 0;
-  border: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 :root{
@@ -108,6 +107,12 @@ color: white;
 
 /******ABOUT ME*******/
 
+.about-section{
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 .image-section{
   display: flex;
   align-items: center;
@@ -126,12 +131,6 @@ color: white;
   box-shadow: var(--box-shadow);
 }
 
-.about-content-box{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .about-content-title{
   font-size: 2rem;
   font-weight: 500;
@@ -146,14 +145,6 @@ color: white;
 }
 
 @media(max-width: 768px){
-  .about-content-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media(max-width: 768px){
   .my-image-section img{
     width: 60% !important;
   }
@@ -161,9 +152,11 @@ color: white;
 
 /******SKILLS*******/
 
-/* .skills {
-  width: 90%;
-} */
+.skills {
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
 
 .skills-container{
   display: flex;
